WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91530
invalidateNodeListCachesInAncestors walks up ancestors even when an attribute that doesn't invalidate node lists changes
https://bugs.webkit.org/show_bug.cgi?id=91530
Summary
invalidateNodeListCachesInAncestors walks up ancestors even when an attribute...
Ryosuke Niwa
Reported
2012-07-17 11:51:51 PDT
invalidateNodeListCachesInAncestors does unnecessary tree walks when attribute changed
Attachments
Fixes the bug
(9.37 KB, patch)
2012-07-17 12:02 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-08
(298.92 KB, application/zip)
2012-07-17 13:12 PDT
,
WebKit Review Bot
no flags
Details
Fixed expected result
(9.34 KB, patch)
2012-07-17 13:19 PDT
,
Ryosuke Niwa
ojan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-07-17 12:02:03 PDT
Created
attachment 152800
[details]
Fixes the bug
WebKit Review Bot
Comment 2
2012-07-17 13:12:53 PDT
Comment on
attachment 152800
[details]
Fixes the bug
Attachment 152800
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13279239
New failing tests: fast/forms/elements-invalidate-on-form-attribute-invalidation.html
WebKit Review Bot
Comment 3
2012-07-17 13:12:57 PDT
Created
attachment 152811
[details]
Archive of layout-test-results from gce-cr-linux-08 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Ryosuke Niwa
Comment 4
2012-07-17 13:19:14 PDT
Created
attachment 152813
[details]
Fixed expected result
Ojan Vafai
Comment 5
2012-07-17 13:53:14 PDT
Comment on
attachment 152813
[details]
Fixed expected result View in context:
https://bugs.webkit.org/attachment.cgi?id=152813&action=review
> Source/WebCore/ChangeLog:14 > + Also renamed Document::clearNodeListCaches to invalidateNodeListCaches to match the name convetion used elsewhere,
convention
Ryosuke Niwa
Comment 6
2012-07-17 13:56:36 PDT
Committed
r122873
: <
http://trac.webkit.org/changeset/122873
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug