invalidateNodeListCachesInAncestors walks up ancestors even when an attribute that doesn't invalidate node lists changes https://bugs.webkit.org/show_bug.cgi?id=91530

Reviewed by Ojan Vafai.

Source/WebCore:

The bug was caused by invalidateNodeListCachesInAncestors not calling Document::shouldInvalidateNodeListCaches with
attrName. Done that.

This chance revealed a bug in shouldInvalidateTypeOnAttributeChange that we weren't checking form attribute changes for
RadioNodeList and HTMLCollection, so fixed the bug.

Also renamed Document::clearNodeListCaches to invalidateNodeListCaches to match the name convention used elsewhere,
and added a new version of DynamicNodeListCacheBase::invalidateCache that takes attrName to reduce the code duplication.

Test: fast/forms/elements-invalidate-on-form-attribute-invalidation.html

* dom/Document.cpp:
(WebCore::Document::invalidateNodeListCaches):
* dom/Document.h:
(Document):
* dom/DynamicNodeList.h:
(WebCore::DynamicNodeListCacheBase::invalidateCache):
(WebCore::DynamicNodeListCacheBase::shouldInvalidateTypeOnAttributeChange):
* dom/Node.cpp:
(WebCore::Node::invalidateNodeListCachesInAncestors):
(WebCore::NodeListsNodeData::invalidateCaches):

LayoutTests:

Add a regression test for invalidating HTMLFormColletion on form attribute changes. This invalidation worked before
because we weren't properly exiting early in Node::invalidateNodeListCachesInAncestors and
Document::invalidateNodeListCaches invalidated all node lists regardless of the attribute type.

* fast/forms/elements-invalidate-on-form-attribute-invalidation-expected.txt: Added.
* fast/forms/elements-invalidate-on-form-attribute-invalidation.html: Added.


Canonical link: https://commits.webkit.org/109335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122873 268f45cc-cd09-0410-ab3c-d52691b4dbfc